#728 dialog button alignment fix

--- a/modules/xerte/parent_templates/Nottingham/models_html5/dialog.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/dialog.css
@@ -28,6 +28,7 @@
 	#pageContents button {
 		margin:		10px;
 		float:		right;
+		clear: both;
 	}
 	
 	.result {
